# AgenticAI

./: multitoolchatbot.ipynb  pyproject.toml  requirements.txt  simplechatbot.ipynb  simplegraph.ipynb
